# sngram

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PRODUCTION_READINESS.md  README.md  TODO.md  clippy.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml
benches/: Cargo.toml
benches/benches/: extract.rs  query.rs
benches/src/: counter.rs  extract.rs  query.rs
bins/: train-events.jsonl
bins/.checkpoint/: state.json
crates/cli/: Cargo.toml
crates/cli/src/: checkpoint.rs  cmd.rs  counter.rs  datasets.rs  engine.rs  learn.rs  lib.rs  main.rs  mint.rs  paths.rs  progress.rs  resources.rs  session.rs  source.rs
crates/cli/src/cmd/: delete.rs  export.rs  inspect.rs  learn.rs  resume.rs  status.rs
crates/eg/: Cargo.toml  IMPLEMENTATION_PLAN.md  INDEX_HOT_PATH_NOTES.md  README.md
crates/eg/benches/: index.rs
crates/eg/scripts/script/: eg-fn-check.sh  mint-tuned-tables.py
crates/eg/src/: haystack.rs  logger.rs  main.rs  messages.rs  search.rs  upstream.rs
crates/eg/src/flags/: config.rs  defs.rs  hiargs.rs  lowargs.rs  mod.rs  parse.rs
crates/eg/src/flags/complete/: bash.rs  fish.rs  powershell.rs  prelude.fish  zsh.rs
crates/eg/src/flags/doc/: help.rs  man.rs  mod.rs  template.long.help  template.rg.1  template.short.help  version.rs
crates/eg/src/index/: backend.rs  bench.rs  bench_suite.rs  bench_suite.tsv  catalog.rs  classify.rs  config.rs  daemon_refresh.rs  document.rs  executor.rs  generation.rs  huffman.rs  initial.rs  location.rs  maintenance.rs  manifest.rs  mod.rs  planner.rs  postings.rs  progress.rs  request.rs  roots.rs  runtime.rs  snapshot.rs  store.rs  suite.rs  summary.rs  verify.rs  walk.rs
crates/eg/src/index/backend/: mod.rs  tantivy.rs  tantivy_ram.rs
crates/eg/src/index/daemon/: main.rs  watch.rs
crates/eg/src/index/data/: fp-queries.tsv
crates/eg/tests/: index_integration.rs  index_perf.rs  phase1.rs
crates/lib/: Cargo.toml  README.md  build.rs
crates/lib/benches/: Cargo.toml
crates/lib/benches/src/: counter.rs  extract.rs  query.rs
crates/lib/src/: error.rs  extract.rs  gram.rs  hashing.rs  learn.rs  lib.rs  pattern.rs  types.rs  weights.rs
crates/lib/src/learn/: batch.rs  mint.rs  mod.rs  settings.rs
crates/lib/src/plan/: analyze.rs  combine.rs  info.rs  mod.rs  options.rs  query.rs  strings.rs
crates/lib/src/query/: algebra.rs  analyze.rs  combine.rs  covers.rs  edges.rs  flush.rs  info.rs  mod.rs  needs.rs  parser.rs  pattern.rs  planner.rs  settings.rs  strings.rs  validate.rs
crates/lib/src/query/analyze/: boundary.rs  classes.rs  looks.rs  mod.rs  repeat.rs
crates/lib/src/scan/: cover.rs  engine.rs  facts.rs  mod.rs  settings.rs  space.rs  validate.rs
crates/lib/tests/: differential.rs  plan_budget.rs  plan_structure.rs  precision.rs  soundness.rs  streaming.rs
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/sngram/: __init__.py
crates/python/src/: arrow_ffi.rs  counter.rs  lib.rs  plan.rs  scanning.rs  table.rs
crates/python/tests/: test_core.py  test_counter.py  test_index_soundness.py
crates/types/: Cargo.toml  README.md
crates/types/src/: bytes.rs  content.rs  error.rs  gram.rs  hashing.rs  learn.rs  lib.rs  query.rs  scan.rs  spng.rs  table.rs  tuning.rs
crates/weights/: Cargo.toml  README.md  build.rs
crates/weights/src/: lib.rs
docs/: PRODUCTION_READINESS.md  architecture.md  benchmarking.md  daemon.md  distr.md  final-training-run.md  fp-optimization-plan.md  index-daemon-plan.md  index-format-v2.md  index-format.md  optimize_query_expantion.md  query-planning.md  ripgrep-upstream.md  training-data.md  training-debug-issues.md  training.md
old_bins/: train-events.jsonl
old_bins/.checkpoint/: state.json
old_bins_2/: train-events.jsonl
old_bins_3/: train-events.jsonl
old_bins_3/.checkpoint/: state.json
python/: .gitignore  README.md  pyproject.toml
python/sngram/: __init__.py  cli.py
python/sngram/train/: __init__.py  checkpoint.py  config.py  dashboard.py  events.py  fsvalidate.py  pipeline.py
python/tests/: test_checkpoint.py  test_cli.py  test_config.py  test_core.py  test_counter.py  test_dashboard.py  test_events.py  test_fsvalidate.py  test_hardening.py  test_live_datasets.py  test_metrics.py  test_pipeline.py  test_planner.py  test_rowgroup.py  test_swh_pipeline.py
scripts/: eg-fn-check.sh  eg-fp-rates.sh  fp-queries.tsv
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: cli_pipeline.rs
train/: .gitignore  README.md  pyproject.toml
train/bins/.checkpoint/: state.json
train/sngram_train/: __init__.py  assets.py  catalog.py  checkpoint.py  cli.py  config.py  content.py  dashboard.py  dataset.py  distribution.py  errors.py  events.py  fetching.py  fsvalidate.py  goals.py  manifest.py  metrics.py  pipeline.py  publishing.py  resources.py  sampling.py  scanning.py  stack.py  stackrows.py  stream.py  units.py
train/tests/: test_assets.py  test_catalog.py  test_checkpoint.py  test_cli.py  test_config.py  test_content.py  test_dashboard.py  test_dataset.py  test_distribution.py  test_errors.py  test_events.py  test_fsvalidate.py  test_hardening.py  test_live_datasets.py  test_manifest.py  test_metrics.py  test_pipeline.py  test_planner.py  test_resources.py  test_rowgroup.py  test_run_recovery.py  test_sampling.py  test_stack_manifest.py  test_stream.py  test_swh_pipeline.py  test_throughput.py  test_train_end_to_end.py  test_units.py
