[workspace]
resolver = "3"
members = ["crates/types", "crates/lib", "crates/weights", "crates/cli", "tests", "benches"]

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Joshua Smotritsky"]
license = "MIT"
repository = "https://github.com/eliosai/sngram"
rust-version = "1.85"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[workspace.dependencies]
# Internal
sngram-types = { version = "0.4.0", path = "crates/types" }
sngram = { version = "0.4.0", path = "crates/lib" }
sngram-weights = { version = "0.4.0", path = "crates/weights" }
sngram-cli = { path = "crates/cli" }

# Types / zero-copy
bytemuck = { version = "1.25", features = ["derive"] }
crc32fast = "1.5"

# Regex parsing
regex-syntax = "0.8"
regex-lite = "0.1"

# Hashing
rustc-hash = "2.1"

# Async
tokio = { version = "1.52", default-features = false }
futures = "0.3"

# HF streaming
opendal = { version = "0.56", default-features = false }
parquet_opendal = "0.8"
parquet = { version = "58", default-features = false }
arrow = { version = "58", default-features = false }

# Checkpoint
redb = "4.1"

# System
sysinfo = "0.35"

# CLI
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }

# Progress
indicatif = "0.18"

# Signals
signal-hook = "0.4"

# Utilities
directories = "6.0"
tempfile = "3.27"
anyhow = "1.0"
thiserror = "2.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Don't panic
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# Async safety
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"

# Numeric correctness
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"

# Code quality
cognitive_complexity = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"

# API design
must_use_candidate = "warn"
missing_errors_doc = "warn"
missing_const_for_fn = "warn"
wildcard_imports = "warn"

# Allowed (too noisy)
blanket_clippy_restriction_lints = "allow"
module_name_repetitions = "allow"
