[workspace]
resolver = "3"
members = ["crates/types", "crates/lib", "crates/lib/benches", "crates/weights", "crates/python", "crates/eg"]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Joshua Smotritsky"]
license = "MIT"
repository = "https://github.com/eliosai/sngram"
rust-version = "1.96"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[workspace.dependencies]
# Internal
sngram-types = { version = "0.5.0", path = "crates/types" }
sngram = { version = "0.5.0", path = "crates/lib" }
sngram-weights = { version = "0.5.0", path = "crates/weights" }

# Types / zero-copy
crc32fast = "1.5"

# Regex parsing
regex = "1"
regex-syntax = "0.8"
regex-lite = "0.1"


# Async
tokio = { version = "1.52", default-features = false }

# Utilities
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Don't panic
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "allow"

# Async safety
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"

# Numeric correctness
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"

# Code quality
cognitive_complexity = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"

# API design
must_use_candidate = "warn"
missing_errors_doc = "warn"
missing_const_for_fn = "warn"
wildcard_imports = "warn"

# Allowed (too noisy)
blanket_clippy_restriction_lints = "allow"
module_name_repetitions = "allow"
