[package]
name = "sngram-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[[bench]]
name = "extract"
path = "src/extract.rs"
harness = false

[[bench]]
name = "query"
path = "src/query.rs"
harness = false

[dependencies]
sngram = { workspace = true }
sngram-types = { workspace = true }
crc32fast = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[lints]
workspace = true
