[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "sngram"
version = "0.5.0"
description = "Sparse n-gram extraction, regex query planning, and weight-table training"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Joshua Smotritsky" }]
keywords = ["ngram", "regex", "search", "code-search", "index"]
dependencies = []

[project.optional-dependencies]
# everything the `sngram train` pipeline needs; plain `pip install sngram`
# stays dependency-free for bindings-only consumers
train = [
    "datasets>=3.2",
    "pyarrow>=17",
    "rich>=13",
    "typer>=0.15",
]

[project.scripts]
sngram = "sngram.cli:main"

[tool.maturin]
manifest-path = "../crates/python/Cargo.toml"
module-name = "sngram._core"
python-source = "."
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "numpy>=2",
    "maturin>=1.7",
    "datasets>=3.2",
    "pyarrow>=17",
    "rich>=13",
    "typer>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
