[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sngram-train"
version = "0.5.0"
description = "Training pipeline for sngram weight tables"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Joshua Smotritsky" }]
dependencies = [
    "sngram",
    "boto3>=1.34",
    "datasets>=3.2",
    "pyarrow>=17",
    "rich>=13",
    "smart-open[s3]>=7",
    "typer>=0.15",
]

[project.scripts]
sngram = "sngram_train.cli:main"

[tool.uv.sources]
sngram = { path = "../crates/python" }

[tool.hatch.build.targets.wheel]
packages = ["sngram_train"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
