[package]
name = "sngram-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for learning sparse n-gram weight tables"

[[bin]]
name = "sngram"
path = "src/main.rs"

[dependencies]
sngram = { workspace = true }
sngram-types = { workspace = true }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "sync", "signal", "macros"] }
futures = { workspace = true }

# HF streaming
opendal = { workspace = true, features = ["services-huggingface"] }
parquet_opendal = { workspace = true }
parquet = { workspace = true, features = ["async", "snap", "zstd", "lz4"] }
arrow = { workspace = true }

# Checkpoint
redb = { workspace = true }
rkyv = { workspace = true }
roaring = { workspace = true }

# System
sysinfo = { workspace = true }
num_cpus = { workspace = true }

# Progress / logging
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }

# Signals
signal-hook = { workspace = true }

# Resilience
tokio-retry = { workspace = true }

# Utilities
directories = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"

[dev-dependencies]

[lints]
workspace = true
