[package]
name = "sngram-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for learning sparse n-gram weight tables"
publish = false

[lib]
name = "sngram_cli"
path = "src/lib.rs"

[[bin]]
name = "sngram"
path = "src/main.rs"

[dependencies]
sngram = { workspace = true }
sngram-types = { workspace = true }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "sync", "signal", "macros", "time"] }
futures = { workspace = true }

# HF streaming
opendal = { workspace = true, features = ["services-huggingface"] }
parquet_opendal = { workspace = true }
parquet = { workspace = true, features = ["async", "snap", "zstd", "lz4"] }
arrow = { workspace = true }

# Progress
indicatif = { workspace = true }

# Utilities
directories = { workspace = true }
anyhow = { workspace = true }
crc32fast = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
