[package]
name = "eg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.75"
bstr = "1.7.0"
grep = "0.4.1"
ignore = "0.4.24"
lexopt = "0.3.0"
log = "0.4.5"
rayon = "1.10.0"
memmap2 = "0.9"
regex-syntax = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.23"
sngram = { workspace = true }
sngram-types = { workspace = true }
sngram-weights = { workspace = true, features = ["12tb"] }
tantivy = "0.26.1"
textwrap = { version = "0.16.2", default-features = false }
termcolor = "1.4.1"

[dev-dependencies]
divan = "0.1.21"

[features]
default = []
pcre2 = ["grep/pcre2"]

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
tikv-jemallocator = "0.6.0"

[lints]
workspace = true
