[package]
name = "sngram"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Sparse n-gram extraction for code search indexing"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["regex", "search", "ngram", "index", "code-search"]
categories = ["text-processing", "algorithms", "data-structures"]
publish = true

[features]
# stream reserves async integration dependencies without changing the sync scan core
stream = ["dep:tokio"]
# learn adds the bigram counters used to train weight tables; off by default
# because it is useless without a training pipeline driving it
learn = ["dep:crc32fast"]

[dependencies]
sngram-types = { workspace = true }
regex-syntax = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["io-util"] }
crc32fast = { workspace = true, optional = true }

[dev-dependencies]
crc32fast = { workspace = true }
regex = { workspace = true }
regex-lite = { workspace = true }

[lints]
workspace = true
