[package]
name = "sngram-weights"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Pre-trained sparse n-gram weight tables, embedded at compile time and selectable per training-data tier via Cargo features."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ngram", "weights", "regex", "search", "code-search"]
categories = ["text-processing", "data-structures"]
publish = true
include = ["src/**", "data/*.bin", "README.md"]

[dependencies]
sngram-types = { workspace = true }
thiserror = { workspace = true }

[features]
default = []

"500gb" = []
"1tb" = []
"2tb" = []
"3tb" = []
"4tb" = []
"5tb" = []
"10tb" = []

[lints]
workspace = true
