[package]
name = "sngram-weights"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Pre-trained sparse n-gram weight tables, embedded at compile time and selectable per training-data tier via Cargo features."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ngram", "weights", "regex", "search", "code-search"]
categories = ["text-processing", "data-structures"]
publish = true
include = ["src/**", "data/*.bin", "build.rs", "README.md"]

[dependencies]
sngram-types = { workspace = true }

[build-dependencies]
sngram-types = { workspace = true }

[features]
default = []

"500gb" = []
"1tb" = []
"2tb" = []
"3tb" = []
"4tb" = []
"5tb" = []
"6tb" = []
"7tb" = []
"8tb" = []
"9tb" = []
"10tb" = []
"11tb" = []
"12tb" = []

[lints]
workspace = true
