[package]
name = "sngram-weights"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The pre-trained production sparse n-gram weight table, embedded at compile time."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ngram", "weights", "regex", "search", "code-search"]
categories = ["text-processing", "data-structures"]
publish = true
include = ["src/**", "data/*.bin", "build.rs", "README.md"]

[dependencies]
sngram-types = { workspace = true }

[build-dependencies]
sngram-types = { workspace = true }

[features]
default = []

production = []

[lints]
workspace = true
